Fixed setDefaultDate(). Fixed setting mustBeOnFuture flag. Disabled setHourStep() as it is not implemented properly.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion project.sdk
     buildToolsVersion project.buildTools
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         minSdkVersion project.minSdk
         targetSdkVersion project.sdk
